--- a/src/main/resources/templates/Frontend/Main/SearchPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/SearchPage.mustache
@@ -255,7 +255,7 @@ nav ul li a {
   <div class="row">
   <div class="card-columns" style="column-count: 4;">
    
-{{#allProducts}}
+{{#Product}}
 <div class="card" style="margin:0; padding:0; border:0px;">
   <div class="card-body" style="margin:0; padding:0;">
      <a href="http://localhost:8888/Index/{{productId}}">
@@ -266,7 +266,7 @@ nav ul li a {
 
 </div>
 
- {{/allProducts}}
+ {{/Product}}
     
 </div>
 
