--- a/src/main/resources/templates/Frontend/Main/ProductPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/ProductPage.mustache
@@ -221,24 +221,23 @@
 
     <script>
 
-    $('.review-block-rate').each(function(i, obj) {
+    $('.review-block-rate').each(function(index) {
     var id = $(this).attr('id');
     if(id === '1'){
-   document.getElementByClassName("review-block-rate").getElementsById("star1").classname="btn btn-default btn-grey btn-sm"
 
- i.getChildById("star2").className = "btn btn-default btn-grey btn-sm";
- i.getElementById("star3").className = "btn btn-default btn-grey btn-sm";
- i.getElementById("star4").className = "btn btn-default btn-grey btn-sm";
- i.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
+ document.getChildById("star2").className = "btn btn-default btn-grey btn-sm";
+ document.getElementById("star3").className = "btn btn-default btn-grey btn-sm";
+ document.getElementById("star4").className = "btn btn-default btn-grey btn-sm";
+document.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
 
 
      
     } else if(id === '2'){
         alert("2");
 
-i.getElementById("star3").className = "btn btn-default btn-grey btn-sm";
-i.getElementById("star4").className = "btn btn-default btn-grey btn-sm";
-i.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
+document.getElementById("star3").className = "btn btn-default btn-grey btn-sm";
+document.getElementById("star4").className = "btn btn-default btn-grey btn-sm";
+document.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
 
     }
     else if(id === '3'){
