--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -3,332 +3,318 @@
 
 <head>
 
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>Bootstrap 4 Carousel with Multiple Items</title>
+    <title>Bootstrap 4 Carousel with Multiple Items</title>
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/Main/animate.css">
-	<link rel="stylesheet" href="/css/Main/style.css">
-	<link rel="stylesheet" href="/css/Main/media-queries.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/Main/animate.css">
+    <link rel="stylesheet" href="/css/Main/style.css">
+    <link rel="stylesheet" href="/css/Main/media-queries.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <style>
+        .card-body-prod {
+            padding: 0;
+        }
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <style>
-  .card-body-prod{
-	  padding:0;
-  }
+        .hero--video {
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            min-height: 600px;
+        }
 
-  .hero--video {
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  min-height: 600px;
-}
-.navbar-fixed-top  {
-top:-70px;
-opacity:0;
-}
+        .navbar-fixed-top {
+            top: -70px;
+            opacity: 0;
+        }
 
-.hero-image {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 600px;
-  margin: 0 auto;
-  right: 0;
-  left: 0;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.hero .search {
-  position: relative;
-  vertical-align: middle;
-  z-index: 2;
-}
-
-.hero .search input {
-  width: 100%;
-  height: 76px;
-  line-height: 76px;
-  border: 1px solid #111;
-  background: rgba(0, 0, 0, 0.8);
-  font-size: 27px;
-  padding: 5px 5px 5px 47px;
-  color: #fff;
-  position: relative;
-  border-radius: 0;
-}
-
-.hero .search button {
-  position: absolute;
-  top: 6px;
-  right: 6px;
-  color: #fff;
-  background: #88687b;
-  font-size: 27px;
-  height: 65px;
-  line-height: 65px;
-  width: 68px;
-  padding: 0;
-  border: 0;
-}
-
-header {
-      width: 100%;
-      height: 80vh;
-      background: url(/img/hero.png) no-repeat 50% 50%;
-      background-size: cover;
-}
-
-.content {
-      width: 94%;
-      margin: 4em auto;
-      font-size: 20px;
-      line-height: 30px;
-      text-align: justify;
-}
-
-.logo {
-      line-height: 60px;
-      position: fixed;
-      float: left;
-      margin: 16px 46px;
-      color: #fff;
-      font-weight: bold;
-      font-size: 20px;
-      letter-spacing: 2px;
-}
-
-nav {
-      position: fixed;
-      width: 100%;
-      line-height: 60px;
-	  z-index:1;
-}
-
-nav ul {
-      line-height: 60px;
-      list-style: none;
-      background: rgba(0, 0, 0, 0);
-      color: #fff;
-      padding: 0;
-      text-align: right;
-      margin: 0;
-      padding-right: 40px;
-      transition: 1s;
-}
-
-nav.black ul {
-      background: #000;
-}
-
-nav ul li {
-      display: inline-block;
-      padding: 16px 40px;;
-}
-
-nav ul li a {
-      text-decoration: none;
-      color: #fff;
-      font-size: 16px;
-}
-
-.menu-icon {
-      line-height: 60px;
-      width: 100%;
-      background: #000;
-      text-align: right;
-      box-sizing: border-box;
-      padding: 15px 24px;
-      cursor: pointer;
-      color: #fff;
-      display: none;
-}
-
-@media(max-width: 786px) {
-
-      .logo {
-            position: fixed;
-            top: 0;
-            margin-top: 16px;
-      }
-
-      nav ul {
-            max-height: 0px;
-            background: #000;
-      }
-
-      nav.black ul {
-            background: #000;
-      }
-
-      .showing {
-            max-height: 34em;
-      }
-
-      nav ul li {
-            box-sizing: border-box;
+        .hero-image {
+            position: absolute;
+            z-index: 1;
             width: 100%;
-            padding: 24px;
-            text-align: center;
-      }
+            height: 600px;
+            margin: 0 auto;
+            right: 0;
+            left: 0;
+            -o-object-fit: cover;
+            object-fit: cover;
+        }
 
-      .menu-icon {
-            display: block;
-      }
+        .hero .search {
+            position: relative;
+            vertical-align: middle;
+            z-index: 2;
+        }
 
-}
+        .hero .search input {
+            width: 100%;
+            height: 76px;
+            line-height: 76px;
+            border: 1px solid #111;
+            background: rgba(0, 0, 0, 0.8);
+            font-size: 27px;
+            padding: 5px 5px 5px 47px;
+            color: #fff;
+            position: relative;
+            border-radius: 0;
+        }
+
+        .hero .search button {
+            position: absolute;
+            top: 6px;
+            right: 6px;
+            color: #fff;
+            background: #88687b;
+            font-size: 27px;
+            height: 65px;
+            line-height: 65px;
+            width: 68px;
+            padding: 0;
+            border: 0;
+        }
+
+        header {
+            width: 100%;
+            height: 80vh;
+            background: url(/img/hero.png) no-repeat 50% 50%;
+            background-size: cover;
+        }
+
+        .content {
+            width: 94%;
+            margin: 4em auto;
+            font-size: 20px;
+            line-height: 30px;
+            text-align: justify;
+        }
+
+        .logo {
+            line-height: 60px;
+            position: fixed;
+            float: left;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
+
+        nav {
+            position: fixed;
+            width: 100%;
+            line-height: 60px;
+            z-index: 1;
+        }
+
+        nav ul {
+            line-height: 60px;
+            list-style: none;
+            background: rgba(0, 0, 0, 0);
+            color: #fff;
+            padding: 0;
+            text-align: right;
+            margin: 0;
+            padding-right: 40px;
+            transition: 1s;
+        }
+
+        nav.black ul {
+            background: #000;
+        }
+
+        nav ul li {
+            display: inline-block;
+            padding: 16px 40px;;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 16px;
+        }
+
+        .menu-icon {
+            line-height: 60px;
+            width: 100%;
+            background: #000;
+            text-align: right;
+            box-sizing: border-box;
+            padding: 15px 24px;
+            cursor: pointer;
+            color: #fff;
+            display: none;
+        }
+
+        @media (max-width: 786px) {
+
+            .logo {
+                position: fixed;
+                top: 0;
+                margin-top: 16px;
+            }
+
+            nav ul {
+                max-height: 0px;
+                background: #000;
+            }
+
+            nav.black ul {
+                background: #000;
+            }
+
+            .showing {
+                max-height: 34em;
+            }
+
+            nav ul li {
+                box-sizing: border-box;
+                width: 100%;
+                padding: 24px;
+                text-align: center;
+            }
+
+            .menu-icon {
+                display: block;
+            }
+
+        }
 
 
-  </style>
+    </style>
 
 
 </head>
 <body>
 <!-- Top menu -->
 
-  <header>
-            <nav>
-               <div class="menu-icon">
-                  <i class="fa fa-bars fa-2x"></i>
-               </div>
-               <div class="logo">
-                  <img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100" href="localhost:8888/Index"/>
-
-               </div>
-               <div class="menu">
-                  <ul>
-                     <li><a href="#">Home</a></li>
-                     <li><a href="#">About</a></li>
-                     <li><a href="#">Blog</a></li>
-                     <li><a href="#">Contact</a></li>
-			   <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
-  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-</svg>
-</a></li>
- <li class="nav-item dropdown" >
-            <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" style="position: absolute !important;">
-                <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="#">Activity Log</a>
-                <div class="dropdown-divider"></div>
-                <form class="dropdown-item" action="/logout" method="post">
-                    <input type="hidden" name="_csrf" value=""/>
-                    <button type="submit" class="btn btn-primary">Logout</button>
-                </form>
-            </div>
-        </li>
-<<<<<<< HEAD
-
-
-=======
->>>>>>> 26540ccddd5e952408045691cb52db94aac1a5f6
-                  </ul>
-				  	
-               </div>
-            </nav>
-			<section class="hero hero--video">
-    <div class="container">
-      <div class="col-12">
-        <div class="search">
-          <div>
-            <input class="input" type="text" id="searchValue" name="s" placeholder="How may we help you?">
-            <button onclick="myFunction()"><i class="fa fa-search"></i></button>
+<header>
+    <nav>
+        <div class="menu-icon">
+            <i class="fa fa-bars fa-2x"></i>
         </div>
-      </div>
-    </div>
-  
-  </section>
-         </header>
+        <div class="logo">
+            <img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100" href="localhost:8888/Index"/>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                         class="bi bi-cart-fill" viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>
+                </a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown"
+                         style="position: absolute !important;">
+                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" href="#">Activity Log</a>
+                        <div class="dropdown-divider"></div>
+                        <form class="dropdown-item" action="/logout" method="post">
+                            <input type="hidden" name="_csrf" value=""/>
+                            <button type="submit" class="btn btn-primary">Logout</button>
+                        </form>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <section class="hero hero--video">
+        <div class="container">
+            <div class="col-12">
+                <div class="search">
+                    <div>
+                        <input class="input" type="text" id="searchValue" name="s" placeholder="How may we help you?">
+                        <button onclick="myFunction()"><i class="fa fa-search"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</header>
 
 
-		 
-
-
-	
 <div class="container" style="max-width:90%; margin-top:1.25rem; ">
-            <button onclick="myFunction()"></button>
-
-  <div class="row">
-  <div class="card-columns" style="column-count: 4;">
-   
-{{#allProducts}}
-<div class="card" style="margin:0; padding:0; border:0px;">
-  <div class="card-body" style="margin:0; padding:0;">
-     <a href="http://localhost:8888/Index/{{productId}}">
-
-  <img src="{{productUrl}}" alt="Italian Trulli" style="padding-bottom:1.25rem;">
-       </a>
-  </div>
-
-</div>
-
- {{/allProducts}}
-    
-</div>
-
-</div>
-</div>
+    <button onclick="myFunction()"></button>
+    <div class="row">
+        <div class="card-columns" style="column-count: 4;">
+            {{#allProducts}}
+            <div class="card" style="margin:0; padding:0; border:0px;">
+                <div class="card-body" style="margin:0; padding:0;">
+                    <a href="http://localhost:8888/Index/{{productId}}">
+                        <img src="{{productUrl}}" alt="Italian Trulli" style="padding-bottom:1.25rem;">
+                    </a>
+                </div>
+            </div>
+            {{/allProducts}}
+        </div>
+    </div>
 </div>
 
 
 <!-- Footer -->
 <footer class="footer-container">
-
-	<div class="container">
-		<div class="row">
-
-			<div class="col">
-				&copy; Bootstrap 4 Carousel with Multiple Items. Download it for free on <a href="https://azmind.com">AZMIND</a>.
-			</div>
-
-		</div>
-	</div>
-
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                &copy; Bootstrap 4 Carousel with Multiple Items. Download it for free on <a href="https://azmind.com">AZMIND</a>.
+            </div>
+        </div>
+    </div>
 </footer>
 
 <!-- Javascript -->
 <script src="/js/Main/jquery-3.3.1.min.js"></script>
 <script src="/js/Main/jquery-migrate-3.0.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
 <script src="/js/Main/jquery.backstretch.min.js"></script>
 <script src="/js/Main/wow.min.js"></script>
 <script src="/js/Main/scripts.js"></script>
 <script>
-  $(document).ready(function() {
-            $(".menu-icon").on("click", function() {
-                  $("nav ul").toggleClass("showing");
-            });
-      });
+    $(document).ready(function () {
+        $(".menu-icon").on("click", function () {
+            $("nav ul").toggleClass("showing");
+        });
+    });
 
-      // Scrolling Effect
+    // Scrolling Effect
 
-      $(window).on("scroll", function() {
-            if($(window).scrollTop()) {
-                  $('nav').addClass('black');
-            }
+    $(window).on("scroll", function () {
+        if ($(window).scrollTop()) {
+            $('nav').addClass('black');
+        }
 
-            else {
-                  $('nav').removeClass('black');
-            }
-      });
+        else {
+            $('nav').removeClass('black');
+        }
+    });
 
-      function myFunction() {
-            var text=document.getElementById("searchValue").value;
-            var concat="http://localhost:8888/Index/Search/"+text;
-            window.location.replace(concat);
+    function myFunction() {
+        var text = document.getElementById("searchValue").value;
+        var concat = "http://localhost:8888/Index/Search/" + text;
+        window.location.replace(concat);
 
-}
+    }
 </script>
 
 </body>
