--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -168,6 +168,11 @@ nav ul li a {
 
       nav.black ul {
             background: #000;
+            overflow:hidden;
+      }
+      nav{
+            overflow:hidden;
+
       }
 
       .showing {
@@ -177,7 +182,7 @@ nav ul li a {
       nav ul li {
             box-sizing: border-box;
             width: 100%;
-            padding: 24px;
+            padding: 10px;
             text-align: center;
       }
 
@@ -227,11 +232,6 @@ nav ul li a {
                 </form>
             </div>
         </li>
-<<<<<<< HEAD
-
-
-=======
->>>>>>> 26540ccddd5e952408045691cb52db94aac1a5f6
                   </ul>
 				  	
                </div>
